--- a/api-produtos-testes-unitarios/src/main/resources/application.properties
+++ b/api-produtos-testes-unitarios/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=api-produtos-testes-unitarios
+spring.datasource.url=jdbc:postgresql://localhost:5432/products_unit_tests
+spring.datasource.username=postgres
+spring.datasource.password=admin123
+spring.jpa.hibernate.ddl-auto=none
+spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
